<resources xmlns:xliff="urn:oasis:names:en:xliff:document:1.2">
    <string name="app_name_release">Trime</string>
    <string name="app_name_debug">Trime (Debug)</string>
    <string name="settings__help_title">Help</string>
    <string name="pref_wiki">Wiki</string>
    <string name="pref_issues">Report Issues</string>
    <string name="pref_trime_qq">Trime QQ Group 1</string>
    <string name="pref_trime_qq2">Trime QQ Group 2</string>
    <string name="pref_rime_qq">Rime QQ Group</string>
    <string name="pref_market">Google Play</string>
    <string name="about__donation_title">Donate</string>
    <string name="about__donation_summary">Use Alipay to support Trime and PRIME</string>
    <string name="settings__about_title">About</string>
    <string name="about__librime_version">Rime Version</string>
    <string name="about__opencc_version">OpenCC Version</string>
    <string name="about__changelog">Change Log</string>
    <string name="license">License</string>
    <string name="pref_credits">Contribute</string>
    <string name="about__product_prime">Win10 PRIME Platform</string>
    <string name="about__privacy_policy">Privacy Policy</string>
    <string name="about__build_info_format">Builder: %1$s\nGit Repo: %2$s\nBuild Git Hash: %3$s\nBuild Time: %4$s</string>
    <string name="selected_theme">Themes</string>
    <string name="selected_theme_summary">Select desired theme</string>
    <string name="normal_mode_color">Colors</string>
    <string name="normal_mode_color_summary">Select desired color</string>
    <string name="profile_reset">Reset</string>
    <string name="profile_reset_summary">Overwrite the same files in shared directory with default built-in assets</string>
    <string name="sound_on_keypress">Sound on key press</string>
    <string name="sound_volume">Sound volume on key press</string>
    <string name="vibrate_on_keypress">Vibrate on key press</string>
    <string name="vibration_duration">Vibration duration on key press</string>
    <string name="vibration_amplitude">Vibration amplitude on key press</string>
    <string name="unit__time_ms">ms</string>
    <string name="speak_on_keypress">Voice on key press</string>
    <string name="speak_key_commit">Voice on commit</string>
    <string name="keyboard__long_press_timeout_title">Long key press delay</string>
    <string name="keyboard__key_repeat_interval_title">Key repeat interval</string>
    <string-array name="keyboard__landscape_mode_entries">
        <item>Never</item>
        <item>Only in landscape mode</item>
        <item>Auto (In wide screen or landscape mode)</item>
        <item>Always</item>
    </string-array>
    <string-array name="other__ui_mode_entries" >
        <item>System Default</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string name="keyboard__soft_cursor_title">Use soft cursor(^) in composition</string>
    <string name="pref_deploy">Deploy</string>
    <string name="sync_user_data_immediately">Sync user data immediately</string>
    <string name="reset_success">Reset Succeeded!</string>
    <string name="reset_failure">Reset Failed!</string>
    <string name="deploy_progress">Deploying…</string>
    <string name="other_ime">Other IMEs</string>
    <string name="other__ui_mode_title">Night Mode</string>
    <string name="others">Others</string>
    <string name="profile_user_data_dir">User directory</string>
    <string name="periodic_background_sync">Periodic background sync</string>
    <string name="periodic_background_sync_status">Last: %1$s (%2$s)</string>
    <string name="pref_help__marketplace">Marketplace</string>
    <string name="pref_help__user_community">User Community</string>
    <string name="pref_keyboard__function">View</string>
    <string name="effects">Effects</string>
    <string name="other__show_app_icon_title">Show app icon in launcher</string>
    <string name="other__show_app_icon_on_summary">This option is only available on some ROMs</string>
    <string name="other__show_app_icon_off_summary">In some ROMs, you will still see this icon in the launcher and may go to the system\'s app information page after tapping it</string>
    <string name="pref__default">Default</string>
    <string name="clipboard_clipboard_limit">Clipboard History Limit</string>
    <string name="clipboard_clipboard_compare_title">Clipboard Compare Rules</string>
    <string name="clipboard_clipboard_output_title">Clipboard Output Rules</string>
    <string name="show_arrow_in_switches">Add arrow (→) for schema switches</string>
    <string name="keyboard__fullscreen_mode_title">Landscape fullscreen input</string>
    <string name="deploy_finish">Deploy finish</string>
    <string name="about__app_info">App Information</string>
    <string name="about__licensing">Licensing</string>
    <string name="about__support">Support</string>
    <string name="about__open_source_licenses">Open Source Licenses</string>
    <string name="system_default">System default</string>
    <string name="keyboard__key_swipe_travel_title">Min travel for gesture</string>
    <string name="trime_app_slogan">Rimes with Your Keystrokes on Android</string>
    <string name="external_storage_permission_not_available">External storage permission is not available</string>
    <string name="external_storage_permission_granted">External storage permission is granted</string>
    <string name="external_storage_permission_denied">External storage permission was denied, deployment or reading schemas and config may not be available</string>
    <string name="custom_sound_effect_name">Key Sound Effect</string>
    <string name="clipboard_draft_limit">Draft History Limit</string>
    <string name="clipboard_draft_output_title">Draft Filter</string>
    <string name="setup__next">Next</string>
    <string name="setup__done">Done</string>
    <string name="setup__enable_ime_hint">Enable <b>Trime</b> in Language and input settings</string>
    <string name="setup__select_ime_hint">Select <b>Trime</b> as your default input method</string>
    <string name="setup__enable_ime">Enable Input Method</string>
    <string name="setup__select_ime">Select Input Method</string>
    <string name="setup__prev">Prev</string>
    <string name="setup__notify_hint">Finish setting up the keyboard</string>
    <string name="setup__step_one">Step 1</string>
    <string name="setup__step_two">Step 2</string>
    <string name="setup__skip">Skip</string>
    <string name="setup__skip_hint">"Do you want to skip the setup wizard? "</string>
    <string name="setup__skip_hint_yes">OK, thanks</string>
    <string name="setup__skip_hint_no">No, please leave me here</string>
    <string name="follow_system_day_night_color">Follow system day/night color</string>
     <string name="keyboard__swipe_enabled">Allow swipe gestures to trigger keys</string>
     <string name="keyboard__key_swipe_velocity">The speed of triggering the button swipe gesture (the distance/velocity is sufficient)</string>
    <string name="about__build_info">Build Info</string>
    <string name="pref_trime_telegram">Telegram Group</string>
    <string name="quick_bar">Quick bar</string>
    <string name="copy_done">Copied to clipboard!</string>
    <string name="exception_logcat_created">Logcat process is already created</string>
    <string name="app_crash">Application crashed</string>
    <string name="app_crash_message">Sorry, but we bring you some logs to investigate.</string>
    <string name="real_time_logs">Real-time logs</string>
    <string name="real_time_logs_clear">Clear All Logs</string>
    <string name="real_time_logs_confirm">Do you want to clear all Logs? (This action cannot be undo)</string>
    <string name="crash_logs">Crash logs</string>
    <string name="clear">Clear Screen</string>
    <string name="export">Export</string>
    <string name="scroll_to_bottom">Jump to Bottom</string>
    <string name="toolkit">Toolkit</string>
    <string name="profile">Profile</string>
    <string name="virtual_keyboard">Virtual Keyboard</string>
    <string name="theme">Theme</string>
    <string name="about">About</string>
    <string name="storage">Storage</string>
    <string name="maintenance">Maintenance</string>
    <string name="loading">Loading</string>
    <string name="success">success</string>
    <string name="failure">failure</string>
    <string name="profile_summary">Define storage locations and change sync settings, etc.</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="collect">Collect</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="clipboard_draft_exclude_app_title">Apps not save draft (package name)</string>
    <string name="about__open_source_licenses_summary">Licenses of third-party libraries</string>
    <string name="clipboard">Clipboard</string>
    <string name="clipboard_draft">Draft</string>
    <string name="clipboard_collection">Collection</string>
    <string name="simple_key_unpin">Unpin</string>
    <string name="simple_key_pin">Pin</string>
    <string name="delete_all">Delete all</string>
    <string name="disable">Disbale</string>
    <string name="pref_clipboard_summary">Collection and draft are also managed here</string>
    <string name="a_regular_expression_per_line">A regular expression per line</string>
    <string name="custom_sound_effect_enabled">Use custom key sound</string>
    <string name="setup__step_three">Setup 3</string>
    <string name="setup__request_permmision_hint">Currently Trime requests storage permmissions to access its configuration\nand allow users to modify easily.</string>
    <string name="setup__request_permmision">Request storage permmision</string>
    <string name="grant_permission">Grant permission</string>
    <string name="notification_permission_title">No Notification Permission</string>
    <string name="notification_permission_message">Without the permission to post notifications, we are not able to notify you when some time-consuming operations are done.</string>
    <string name="rime_daemon">Rime Daemon</string>
    <string name="restarting_rime">Restarting Rime</string>
    <string name="select_current_schema">Select current schema</string>
    <string name="enable_schemata">Enable schemata</string>
    <string name="no_schema_to_select">Currently there is no schema to select. Please go to enable schemata from the available list.</string>
    <string name="no_schema_to_enable">No schema to enable. Make sure you have prelude and schema files in the user directory.</string>
    <string name="schemata">Schemata</string>
    <string name="schemata_hint">Select current schema or enable more schemata</string>
    <string name="navbar_background">Navigation bar background</string>
    <string name="no_theme_to_select">Currently there is no theme to select.</string>
    <string name="no_color_to_select">Currently there is no color scheme to select.</string>
    <string name="no_effect_to_select">Currently there is no key sound effect to select.</string>
    <string name="setup_channel">Setup Wizard</string>
    <string name="forget_this_word">Forget this word</string>
    <string name="synchronization">Synchronization</string>
    <string name="periodic_background_sync_interval">Interval of background syncing (in minutes)</string>
    <string name="candidates_window">Candidates Window</string>
    <string name="show_candidates_window">Show candidates window</string>
    <string name="general">General</string>
    <string name="preedit">Preedit</string>
    <string name="commit_text_preview">Commit text preview</string>
    <string name="raw_input">Raw input</string>
    <string name="composing_text_mode">Show composing text in editor</string>
    <string name="depends_on_input_device">Depends on input device</string>
    <string name="always_show">Always show</string>
    <string name="follow_cursor">Follow cursor</string>
</resources>