<?xml version="1.0" encoding="utf-8"?>

<!--
SPDX-FileCopyrightText: 2015 - 2024 Rime community

SPDX-License-Identifier: GPL-3.0-or-later
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="pref_keyboard"
    android:title="@string/virtual_keyboard">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/quick_bar">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="keyboard__soft_cursor"
            android:title="@string/keyboard__soft_cursor_title"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/effects">
        <SwitchPreferenceCompat
            android:key="sound_on_keypress"
            android:title="@string/sound_on_keypress"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:key="custom_sound_effect_enabled"
            android:title="@string/custom_sound_effect_enabled"
            android:dependency="sound_on_keypress"
            app:iconSpaceReserved="false" />
        <Preference
            android:key="custom_sound_effect_name"
            android:title="@string/custom_sound_effect_name"
            android:dependency="custom_sound_effect_enabled"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />
        <com.osfans.trime.ui.components.DialogSeekBarPreference
            android:defaultValue="-1"
            android:dependency="sound_on_keypress"
            android:key="sound_volume"
            android:title="@string/sound_volume"
            app:allowDividerAbove="false"
            app:iconSpaceReserved="false"
            app:max="100"
            app:systemDefaultValue="-1"
            app:systemDefaultValueText="@string/system_default"
            app:unit="%"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            android:key="vibrate_on_keypress"
            android:title="@string/vibrate_on_keypress"
            app:iconSpaceReserved="false" />
        <com.osfans.trime.ui.components.DialogSeekBarPreference
            android:defaultValue="-1"
            android:dependency="vibrate_on_keypress"
            android:key="vibration_duration"
            android:title="@string/vibration_duration"
            app:allowDividerAbove="false"
            app:iconSpaceReserved="false"
            app:max="100"
            app:systemDefaultValue="-1"
            app:systemDefaultValueText="@string/system_default"
            app:unit="@string/unit__time_ms"
            app:useSimpleSummaryProvider="true" />
        <com.osfans.trime.ui.components.DialogSeekBarPreference
            android:defaultValue="-1"
            android:dependency="vibrate_on_keypress"
            android:key="vibration_amplitude"
            android:title="@string/vibration_amplitude"
            app:allowDividerAbove="false"
            app:iconSpaceReserved="false"
            app:max="255"
            app:systemDefaultValue="-1"
            app:systemDefaultValueText="@string/system_default"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            android:key="speak_on_keypress"
            android:title="@string/speak_on_keypress"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:key="speak_commit"
            android:title="@string/speak_key_commit"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:key="keyboard__swipe_enabled"
            android:title="@string/keyboard__swipe_enabled"
            android:defaultValue="true"
            app:iconSpaceReserved="false" />
        <com.osfans.trime.ui.components.DialogSeekBarPreference
            android:defaultValue="80"
            android:key="keyboard__key_swipe_travel"
            android:title="@string/keyboard__key_swipe_travel_title"
            app:allowDividerAbove="false"
            app:iconSpaceReserved="false"
            app:max="400"
            app:seekBarIncrement="10"
            app:useSimpleSummaryProvider="true" />
        <com.osfans.trime.ui.components.DialogSeekBarPreference
            android:defaultValue="800"
            android:key="keyboard__key_swipe_velocity"
            android:title="@string/keyboard__key_swipe_velocity"
            app:allowDividerAbove="false"
            app:iconSpaceReserved="false"
            app:max="30000"
            app:seekBarIncrement="100"
            app:useSimpleSummaryProvider="true"/>
        <com.osfans.trime.ui.components.DialogSeekBarPreference
            android:defaultValue="400"
            android:key="keyboard__key_long_press_timeout"
            android:title="@string/keyboard__long_press_timeout_title"
            android:widgetLayout="@layout/seek_bar_dialog"
            app:allowDividerAbove="false"
            app:iconSpaceReserved="false"
            app:max="800"
            app:min="100"
            app:seekBarIncrement="10"
            app:unit="@string/unit__time_ms"
            app:useSimpleSummaryProvider="true" />
        <com.osfans.trime.ui.components.DialogSeekBarPreference
            android:defaultValue="30"
            android:key="keyboard__key_repeat_interval"
            android:title="@string/keyboard__key_repeat_interval_title"
            app:allowDividerAbove="false"
            app:iconSpaceReserved="false"
            app:max="100"
            app:min="10"
            app:seekBarIncrement="10"
            app:unit="@string/unit__time_ms"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>
